cabal-version:       3.0
name:                plexil2maude
version:             0.6.0
synopsis:            A parser from PLEXIL XML to the internal PLEXIL-V representation of plans.
author:              Marco A. Feliu
maintainer:          marco.feliu@nasa.gov
category:            Language
build-type:          Simple
data-files:          data/plexil-script.rng

common shared
  default-language: Haskell2010
  build-depends:    base >=4.9,
                    directory,
                    filepath,
                    xml-conduit,
                    raw-strings-qq,
                    text,
                    mtl,
                    pretty,
                    containers,
                    tasty >= 1.1,
                    tasty-hspec,
                    hspec >= 2,
                    tasty-hunit,
                    hxt,
                    hxt-relaxng,
                    oneOfN,
                    either
  tested-with:      GHC == 9.6.7

library plexil2maudeLibrary
  import: shared
  hs-source-dirs:   src
  exposed-modules:  Parser,
                    LibraryCallExpander,
                    PLX.LibraryCall,
                    PSX2Maude.PrettyMaude,
                    PLEXILScript,
                    RecursiveUnfolder

executable plx2maude
  import: shared
  hs-source-dirs: cli-src
  main-is:        Main.hs
  other-modules:  Options
  build-depends:  plexil2maudeLibrary,
                  optparse-applicative
  ghc-options:    -Wall -Werror

executable psx2maude
  import: shared
  hs-source-dirs: apps
  main-is:        PSX2Maude/Main.hs
  other-modules:  PSX2Maude.Options,
                  Paths_plexil2maude
  build-depends:  plexil2maudeLibrary,
                  optparse-applicative
  ghc-options:    -Wall -Werror

test-suite test
  import: shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        TestSuite.hs
  other-modules:  Benchmarks,
                  GlobalDeclarations,
                  LibraryCallExpanderTests,
                  PSX2MaudeTests,
                  TestArrays,
                  TestCommon,
                  TestLibraryCall,
                  TestNodeRef
  build-depends:  plexil2maudeLibrary,
                  temporary,
                  process
