cabal-version:       3.0
name:                plexil-log-tools
version:             0.6.0
synopsis:            Tools for comparing PLEXIL and PLEXIL-V execution logs.
author:              Marco A. Feliu
maintainer:          marco.feliu@nasa.gov
category:            Language
build-type:          Simple

library
  exposed-modules:  PLEXIL.LogParser
                    PLEXIL.DebugLogParser
                    PLEXIL.Trace
  build-depends:    base >=4.9,
                    parsec == 3.*,
                    parsec-numbers == 0.*,
                    raw-strings-qq == 1.*,
                    containers == 0.*,
                    regex-posix == 0.*,
                    mtl == 2.*
  hs-source-dirs:   src
  default-language: Haskell2010
  tested-with:      GHC == 9.6.7

executable plexilog-maude
  main-is:          PlexilogMaude.hs
  build-depends:    base >=4.9,
                    parsec == 3.*,
                    parsec-numbers == 0.*,
                    raw-strings-qq == 1.*,
                    mtl == 2.*,
                    containers == 0.*,
                    plexil-log-tools
  hs-source-dirs:   src
  default-language: Haskell2010

executable plexilog
  main-is:          Plexilog.hs
  build-depends:    base >=4.9,
                    parsec == 3.*,
                    parsec-numbers == 0.*,
                    raw-strings-qq == 1.*,
                    mtl == 2.*,
                    containers == 0.*,
                    regex-posix == 0.*,
                    plexil-log-tools
  hs-source-dirs:   src
  default-language: Haskell2010

executable plexilog-diff
  main-is:          PlexilogDiff.hs
  build-depends:    base >=4.9,
                    parsec == 3.*,
                    parsec-numbers == 0.*,
                    raw-strings-qq == 1.*,
                    mtl == 2.*,
                    optparse-applicative >= 0.14,
                    Diff == 0.3.*,
                    containers == 0.*,
                    regex-posix == 0.*,
                    plexil-log-tools
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite plexilog-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends:
    base == 4.*,
    hspec == 2.*,
    raw-strings-qq == 1.*,
    parsec == 3.*,
    parsec-numbers == 0.*,
    mtl == 2.*,
    containers == 0.*,
    plexil-log-tools
  other-modules:
    PLEXIL.CommonSpec
    PLEXIL.DebugLogParserSpec
    PLEXIL.MicroSpec
    PLEXIL.TransitionSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
